added some crud opperations to person controller
